potwierdzenie rezerwacji bez przycisku

--- a/BibliotekaMobilnaPWR/res/values/strings.xml
+++ b/BibliotekaMobilnaPWR/res/values/strings.xml
@@ -82,5 +82,6 @@
     <string name="orders_button">Zamówienia</string>
     <string name="title_activity_orders">OrdersActivity</string>
     <string name="title_activity_rents">RentsActivity</string>
+    <string name="confirmation_button">Potwierdzam</string>
 
 </resources>
