--- a/BibliotekaMobilnaPWR/res/values/strings.xml
+++ b/BibliotekaMobilnaPWR/res/values/strings.xml
@@ -84,5 +84,9 @@
     <string name="title_activity_rents">RentsActivity</string>
     <string name="confirmation_button">Potwierdzam</string>
     <string name="title_activity_recommend">RecommendActivity</string>
+    <string name="SMS">Wyślij SMS</string>
+    <string name="email">Wyślij e-mail</string>
+    <string name="twitter">Opublikuj na twitter</string>
+    <string name="rec_back">Powrót</string>
 
 </resources>
