--- a/BibliotekaMobilnaPWR/res/values/strings.xml
+++ b/BibliotekaMobilnaPWR/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">Biblioteka Mobilna PWR</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="action_notifications">Alarmy</string>
+    <string name="action_notifications">Alerty</string>
     <string name="title_main">Biblioteka PWR</string>
     <string name="main_title">Tytuł</string>
     <string name="main_author">Autor</string>
