poprawa GUI Main Logowanie Wypozyczenia add icon edit exit save

--- a/BibliotekaMobilnaPWR/res/values/strings.xml
+++ b/BibliotekaMobilnaPWR/res/values/strings.xml
@@ -94,5 +94,6 @@
     <string name="title_Statement">Stan rezerwacji</string>
      <string name="title_History">Historia wypożyczeń</string>
      <string name="title_Orders">Zamówienia</string>
+     <string name="title_wypozyczenia_activity">Wypożyczenia</string>
 
 </resources>
