--- a/BibliotekaMobilnaPWR/res/values/strings.xml
+++ b/BibliotekaMobilnaPWR/res/values/strings.xml
@@ -103,5 +103,6 @@
     <string name="book_opis_egzemplarza">Opis Egzemplarza</string>
     <string name="book_miejsce_odbioru">Miejsce Odbioru</string>
     <string name="book_czas_wypo">Czas Wypożyczenia</string>
-
+	<string name="usun_kom"> Usuń  </string>
+	<string name="edytuj_kom">Edytuj</string>
 </resources>
