--- a/BibliotekaMobilnaPWR/res/values/strings.xml
+++ b/BibliotekaMobilnaPWR/res/values/strings.xml
@@ -95,5 +95,6 @@
      <string name="title_History">Historia wypożyczeń</string>
      <string name="title_Orders">Zamówienia</string>
      <string name="title_wypozyczenia_activity">Wypożyczenia</string>
-
+      <string name="main_save">Zapisz</string>
+      <string name="title_add_alert">Dodaj Alert</string> 
 </resources>
